--- a/public/stylesheets/blockhead.css
+++ b/public/stylesheets/blockhead.css
@@ -39,8 +39,8 @@ div.block {
 	margin-bottom: 15px;
 	z-index: 3;
 }
-div.block div.block {
-	margin-top: 15px;
+.admin-mode div.block div.block {
+	margin-top: 23px;
 }
 div.content {
 	z-index: 4;
