--- a/app/views/sections/sitemap.html.erb
+++ b/app/views/sections/sitemap.html.erb
@@ -1,3 +1,11 @@
+<% unless @seo_profile.blank? %>
+	<% content_for :title do %><%=h @seo_profile.title || "Blockhead" %><% end %>
+	<% content_for :seo_keywords do %><%=h @seo_profile.keywords || "Blockhead" %><% end %>
+	<% content_for :seo_description do %><%=h @seo_profile.description || "Blockhead" %><% end %>
+	<% content_for :seo_heading1 do %><%=h @seo_profile.h1 || "Blockhead" %><% end %>
+	<% content_for :seo_heading2 do %><%=h @seo_profile.h2 || "Blockhead" %><% end %>
+<% end %>
+
 <% content_for :body_class do %>
 	<%= "admin-mode" if authorized? %>
   sitemap
